--- a/samples/AspnetWebApi2Helpers.Sample.Web/Areas/HelpPage/Views/Help/Api.cshtml
+++ b/samples/AspnetWebApi2Helpers.Sample.Web/Areas/HelpPage/Views/Help/Api.cshtml
@@ -1,6 +1,10 @@
 @using System.Web.Http
 @using AspnetWebApi2Helpers.Sample.Web.Areas.HelpPage.Models
 @model HelpPageApiModel
+@section Scripts {
+    @Html.DisplayForModel("TestClientDialogs")
+    @Html.DisplayForModel("TestClientReferences")
+}
 
 @{
     var description = Model.ApiDescription;
